# Modelisation-Programmation

TP1_bayardg_pieruccd/: Makefile
TP1_bayardg_pieruccd/src/: Dvector.cpp  Dvector.h  main.cpp
TP2_bayardg_pieruccd/: Makefile
TP2_bayardg_pieruccd/src/: Dvector.cpp  Dvector.h  main.cpp
TP3_bayardg_pieruccd/: CMakeLists.txt  GenerateurNombreAleatoire  Makefile  clean  clean.sh  readme.txt
TP3_bayardg_pieruccd/doc/: CMakeLists.txt  doxyfilerc
TP3_bayardg_pieruccd/main/: CMakeLists.txt  main.cpp  mainbis.cpp
TP3_bayardg_pieruccd/nbproject/: configurations.xml  project.xml
TP3_bayardg_pieruccd/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml
TP3_bayardg_pieruccd/src/: CMakeLists.txt  Distribution.cpp  Distribution.h  DistributionNormale.cpp  DistributionNormale.h  DistributionUniforme.cpp  DistributionUniforme.h  Dvector.cpp  Dvector.h  GenerateurNombreAleatoire.cpp  GenerateurNombreAleatoire.h  ParkMiller.cpp  ParkMiller.h  XorShift.cpp  XorShift.h  main.cpp
TP3_bayardg_pieruccd/tests/: CMakeLists.txt  test_constructor.cxx  test_generator  test_generator.cxx  test_operator.cxx
